# Ishmael-Insights-API

./: .gitignore  EXAMPLE.env  LICENSE  README.md  example.py  pyproject.toml  tags_dict.md
examples/: export_cbb_snapshot_csv.py
src/ishmael_insights_api/: __init__.py  client.py  errors.py
