[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ishmael-insights-api"
version = "0.2.2"
description = "Python client for the Ishmael Insights public API"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "Ryder Rhoads" }
]
dependencies = [
  "requests>=2.31.0"
]
keywords = ["api", "prediction-markets", "polymarket", "ishmael", "sdk"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries :: Python Modules"
]

[project.urls]
Homepage = "https://ishmaelinsights.com/api-docs"
Repository = "https://github.com/ryderrhoads/Ishmael-Insights-API"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
